@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-12T01:14:09Z",
+  "timestamp" : "2023-10-12T08:22:37Z",
   "count_outdated" : 530,
   "uniques_outdated" : 252,
-  "count" : 563,
-  "uniques" : 267,
+  "count" : 564,
+  "uniques" : 268,
   "clones" : [
     {
       "timestamp": "2023-09-28T00:00:00Z",
@@ -109,6 +109,15 @@
       "count": 3,
       "count_minmax": [ 1, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
